salesforce/force-app/main/default/objects/Supplier_Onboarding__c/Supplier_Onboarding__c.object-meta.xml
<CustomObject>
    <description>One supplier qualification journey. Carries the prerequisites that gate contract initiation, and the Create Contract link into the CLM.</description>
    <label>Supplier Onboarding</label>
    <nameField>
        <displayFormat>ONB-{YYYY}-{0000}</displayFormat>
        <label>Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>