salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Bank_Verified__c.field-meta.xml
<CustomField>
    <fullName>Bank_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Verified</label>
    <type>Checkbox</type>
</CustomField>