salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/CLM_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>CLM_Contract_Id__c</fullName>
    <label>CLM Contract Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>