salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/CLM_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>CLM_Contract_Status__c</fullName>
    <label>CLM Contract Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>