salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/CLM_Workspace_URL__c.field-meta.xml
<CustomField>
    <fullName>CLM_Workspace_URL__c</fullName>
    <formula>IF(
  AND(
    ISPICKVAL(Onboarding_Status__c, "Approved - Ready to Contract"),
    Qualification_Complete__c,
    Insurance_Verified__c,
    Bank_Verified__c,
    Sanctions_Cleared__c
  ),
  HYPERLINK("http://localhost:5173/#sf?onb=" &amp; Id &amp; "&amp;acct=" &amp; Account__c, "Create Contract", "_blank"),
  "Onboarding incomplete"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Contract</label>
    <type>Text</type>
</CustomField>