salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <label>Company Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>