salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Facility_Site__c.field-meta.xml
<CustomField>
    <fullName>Facility_Site__c</fullName>
    <label>Facility / Site</label>
    <length>120</length>
    <type>Text</type>
</CustomField>