salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity (ours)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>