salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Approved - Ready to Contract</fullName>
                </value>
                <value>
                    <fullName>Insurance Pending</fullName>
                </value>
                <value>
                    <fullName>In Qualification</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>