salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>40</length>
    <type>Text</type>
</CustomField>