salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Procurement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Owner__c</fullName>
    <label>Procurement Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>