salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Qualification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualification Complete</label>
    <type>Checkbox</type>
</CustomField>