salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Sanctions_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Sanctions_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanctions Cleared</label>
    <type>Checkbox</type>
</CustomField>