salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Hard FM</fullName>
                </value>
                <value>
                    <fullName>Soft FM</fullName>
                </value>
                <value>
                    <fullName>Integrated FM</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Technical Maintenance</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Grounds/Landscaping</fullName>
                </value>
                <value>
                    <fullName>Waste Management</fullName>
                </value>
                <value>
                    <fullName>Energy Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>