salesforce/force-app/main/default/objects/Supplier_Onboarding__c/fields/Supplier_Category__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Category__c</fullName>
    <label>Supplier Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Facilities Services</fullName>
                </value>
                <value>
                    <fullName>Hard Services</fullName>
                </value>
                <value>
                    <fullName>Soft Services</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>