salesforce/force-app/main/default/objects/Supplier_Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Onboarding_Status__c</columns>
    <columns>Service_Category__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>CLM_Contract_Id__c</columns>
    <columns>CLM_Contract_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>